--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             </div>
         </section>
         <section class="phone-section">
-            <div class="container content-position">
-                <img src="./images/TelePhones.png" alt="" />
+            <div class="container content-position1">
+                <div class="telephone"><img src="./images/TelePhones.png" alt="" /></div>
             </div>
         </section>
         <section class="last-section">
